test/domains/compilerErrors/constDomain11.chpl
var d: domain(int);
forall i in 1..2 do
  d.requestCapacity(10);
