test/domains/compilerErrors/constDomain11.good
constDomain11.chpl:3: error: const actual is passed to 'ref' formal 'this' of requestCapacity()
note: to formal of type DefaultAssociativeDom(int(64),true)
constDomain11.chpl:2: note: The shadow variable 'd' is constant due to forall intents in this loop
